# CotA

./: .gitignore  Cargo.toml  README.md  build  build_win  cota.code-workspace  export_presets.cfg  gdnativelibrary.tres  main.tscn  osxcross_setup  project.godot
.cargo/: config
godot/: app.gdns  experience.gdns  export_presets.cfg  gdnativelibrary.tres  icon.icns  main.tscn  offline.gdns  portals.gdns  project.godot  stats.gdns
res/: cota.desktop  producer_skills.csv
src/: app.rs  constants.rs  experience.rs  experience_page.rs  lib.rs  main.rs  menu.rs  offline.rs  portals.rs  portals_page.rs  stats.rs  thread_pool.rs  ui.rs  util.rs
src/res/: adventurer_skills.csv  producer_skills.csv
