[package]
name = "cota"
# Don't forget to set the file version for Windows and Mac in the editor.
version = "3.1.2"
authors = ["Barugon"]
edition = "2018"

[dependencies]
chrono = "*"
dirs = "*"
gdnative = "*"
num_cpus = "*"
num-format = "*"
regex = "*"
serde_json = "*"
thread-pool = { path = "../thread-pool" }
xml_dom = "*"

[lib]
crate-type = ["cdylib"]
