[package]
name = "cota"
# Don't forget to set the file version for Windows and Mac in the editor.
version = "3.2.0"
authors = ["Barugon"]
edition = "2018"

[dependencies]
chrono = "*"
dirs = "*"
gdnative = "0.9"
num_cpus = "*"
num-format = "*"
regex = "*"
thread-pool = { path = "../thread-pool" }
xml_dom = "*"

[lib]
crate-type = ["cdylib"]
