[package]
name = "cota"
# Don't forget to set the file version for Windows and Mac in the editor.
version = "3.4.1"
authors = ["Barugon"]
edition = "2018"

[dependencies]
chrono = "*"
dirs = "*"
gdnative = "0.9"
num_cpus = "*"
num-format = "*"
regex = "*"
thread-pool = { path = "../thread-pool" }

[lib]
crate-type = ["cdylib"]
